css/styles.css
/* ---- Google Fonts ---- */
@import url('https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap');
/* ---- Custom Properties ---- */
:root{
    /* Colors */
    --clr-veryDarkMagenta: hsl(300, 43%, 22%);
    --clr-softPink: hsl(333, 80%, 67%);
    --clr-darkGrayMagenta: hsl(303, 10%, 53%);
    --clr-lightGrayMagenta: hsl(300, 24%, 96%);
    --clr-white: hsl(0, 0%, 100%);
    --clr-gold: #ff9529;
    /* Fonts and typography */
    --ff-primary: 'Spartan', sans-serif;

    --fs-h1: 2.5rem;
    --fs-big: 1.5rem;
    --fs-normal: .968rem;
    --fs-small: .868rem;

    --fw-reg: 400;
    --fw-med: 500;
    --fw-bold: 700;
    /* Z index */
    /* Box Shadow */
}
@media screen and (min-width: 768px){
    :root{
        --fs-h1: 3rem;
        --fs-big: 1.6rem;
        --fs-normal: 1rem;
        --fs-small: .868rem;
    }
}
/* ---- General Styles ---- */
/* Reset */
*,
*::before,
*::after{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}
html{
    font-size: 15px;
}
body{
    background-color: var(--clr-white);
    color: var(--clr-darkGrayMagenta);
    
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    font-family: var(--ff-primary);
    font-size: var(--fs-normal);
    font-weight: var(--fw-reg);
}
img{
    max-width: 100%;
    height: auto;
}
/* Typography */
h1{font-size: var(--fs-h1);}
/* Components */
.star::before{
    content: '\2605';
    color: var(--clr-gold);
    font-size: var(--fs-big);
}
/* ---- Section Styles ---- */
/* Social Proof */
.social-proof{
    min-height: 100vh;
    background-image: url(/project/images/bg-pattern-top-mobile.svg),
                      url(/project/images/bg-pattern-bottom-mobile.svg);
    background-position: left top, right bottom;
    background-repeat: no-repeat;
    background-size: contain;
    padding: 5rem 1.5rem;
}
.social-proof__header,
.social-proof__ratings{
    text-align: center;
    margin-bottom: 1.5rem;
}
.social-proof__header{
    max-width: 480px;
    margin-left: auto;
    margin-right: auto;
}
.social-proof__title{
    color: var(--clr-veryDarkMagenta);
    margin-bottom: 1.5rem;
}
.social-proof__text{
    font-weight: var(--fw-med);
    line-height: 1.6;
}
.social-proof__rating{
    background-color: var(--clr-lightGrayMagenta);
    border-radius: .5rem;
    margin-bottom: 1rem;
    padding: .8rem 0;
    /* max-width: 450px; */
    margin-left: auto;
    margin-right: auto;
}
.social-proof__rating p{
    margin-top: .5rem;
    font-weight: var(--fw-bold);
    color: var(--clr-veryDarkMagenta);
}
.testimonial{
    background-color: var(--clr-veryDarkMagenta);
    color: var(--clr-lightGrayMagenta);
    /* max-width: 345px; */
    padding: 2.5rem 2rem;
    margin-bottom: 1rem;
    margin-left: auto;
    margin-right: auto;
    border-radius: .5rem;
    line-height: 1.6;
}
.testimonial__author{
    margin-bottom: 2rem;
    display: flex;
    justify-content: flex-start;
    align-items: center;
}
.testimonial__img{
    height: 2.5rem;
    width: 2.5rem;
    border-radius: 50%;
}
.testimonial__author-data{
    margin-left: 1.5rem;
    font-size: var(--fs-small);
}
.testimonial__user-name{
    font-weight: var(--fw-med);
}
.testimonial__user-role{
    color: var(--clr-softPink);
}
.testimonial__quote{
    font-size: var(--fs-small);
}
.footer{
    padding: 0 1.5rem 1rem;
    text-align: center;
}
/* ---- Media Queries ---- */
@media screen and (min-width: 768px){
    .social-proof{
        background-image: url(/project/images/bg-pattern-top-desktop.svg),
                          url(/project/images/bg-pattern-bottom-desktop.svg);
        background-size: 35%, 85%;
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        
        column-gap: 8rem;
        row-gap: 4rem;
        max-width: 1200px;
    }
    .social-proof__header,
    .social-proof__ratings{
        text-align: left;
        margin: initial;
        align-self: center;
    }
    .social-proof__ratings{
        display: flex;
        flex-direction: column;
    }
    .social-proof__rating:nth-child(1){
        align-self: flex-start;
    }
    .social-proof__rating:nth-child(2){
        align-self: center;
    }
    .social-proof__rating:nth-child(3){
        align-self: flex-end;
    }
    .social-proof__rating{
        padding-left: 2rem;
        padding-right: 2rem;
        display: flex;
        justify-content: flex-start;
        align-items: center;
        margin-left: initial;
        margin-right: initial;
    }
    .social-proof__rating p{
        margin-left: 2rem;
    }
    .social-proof__testimonials{
        grid-column: 1/-1;
        display: flex;
        justify-content: space-between;
    }
    .testimonial{
        margin-bottom: initial;
        margin-left: initial;
        margin-right: initial;
        max-width: 30%;
    }
}
@media screen and (min-width: 1100px){
    .social-proof{
        /* grid-template-rows: 5fr 5fr; */
    }
    .testimonial:nth-child(1){
        align-self: flex-start;
    }
    .testimonial:nth-child(2){
        align-self: center;
    }
    .testimonial:nth-child(3){
        align-self: flex-end;
    }
}

